<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_translucent">

    <ImageView
        android:id="@+id/bg_main"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_task_done" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="245dp"
            android:text="@string/task_done_title"
            android:gravity="top"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="7dp"
            android:text="@string/task_done"
            android:gravity="top"
            android:textSize="15sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:text="@string/task_unlock"
            android:textColor="@color/item_text_normal"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="18dp"
            app:elevation="0dp"
            app:strokeWidth="0dp" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="@color/white"
            android:text="@string/later"
            android:gravity="top"
            android:textSize="14sp"/>

    </LinearLayout>
</FrameLayout>