<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:strokeColor="#6A6A6A">

        <!--        android:background="#20000000"-->
        <LinearLayout
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/menu_gw_daily"
                    style="@style/NavMenuHeader"
                    android:drawableLeft="@mipmap/ic_gw_daily"
                    android:text="@string/daily_gw" />

                <ImageView
                    android:id="@+id/red_dot3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/red_dot" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_divider" />

            <TextView
                android:id="@+id/menu_favorites"
                style="@style/NavMenuHeader"
                android:drawableLeft="@mipmap/ic_favorites"
                android:text="@string/favorites" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_divider" />


            <TextView
                android:id="@+id/menu_search"
                style="@style/NavMenuHeader"
                android:drawableLeft="@mipmap/ic_search"
                android:text="@string/search" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <!-- 分割线（与下方RecyclerView分隔） -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="12dp"
        android:text="@string/timeline"
        android:textSize="14sp" />
</LinearLayout>