<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_base">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings"
                android:textColor="@color/item_text_normal"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="@drawable/edittext_rounded_white_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rb_dynamic"
                    style="@style/LangSettingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dynamic_wallpaper"/>

                <ImageView
                    android:id="@+id/export_vip"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:src="@mipmap/ic_vip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:padding="12dp"
                android:background="@drawable/edittext_rounded_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/one_click_bible"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/item_text_normal"
                        android:text="@string/one_click_reading"
                        android:textSize="14sp" />

                    <Switch
                        android:id="@+id/switch_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/switch_track_color"
                        android:trackTint="@color/switch_track_color"
                        android:checked="true" />
                </LinearLayout>

                <!-- 功能说明 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/reading_feature_desc"
                    android:textColor="@color/text_gray"
                    android:textSize="12sp" />

                <!-- 预览图 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|left"
                    android:orientation="horizontal">

                    <siyamed.shapeimageview.PorterShapeImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="240dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:siShape="@drawable/shape_image_bubble"
                        app:siSquare="false"
                        android:src="@mipmap/wallpaper_preview1" />

                    <siyamed.shapeimageview.PorterShapeImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="240dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:siShape="@drawable/shape_image_bubble"
                        app:siSquare="false"
                        android:layout_marginLeft="12dp"
                        android:src="@mipmap/wallpaper_preview2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:padding="8dp"
            android:background="@drawable/edittext_rounded_white_bg"
            android:orientation="vertical">
            <!-- 静态壁纸 -->
            <CheckBox
                android:id="@+id/rb_static"
                style="@style/LangSettingButton"
                android:layout_height="wrap_content"
                android:text="@string/static_wallpaper"/>

            <!-- 静态壁纸说明 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/static_wallpaper_desc"
                android:textColor="@color/text_gray"
                android:textSize="12sp" />

            <!-- 屏幕选择 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/rb_home"
                    style="@style/LangSettingButton"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/home_screen" />

                <CheckBox
                    android:id="@+id/rb_lock"
                    style="@style/LangSettingButton"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:text="@string/lock_screen" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/wallpaper_display_hint"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:layout_width="316dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/confirm"
            android:textColor="@color/item_text_selected"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:cornerRadius="21dp"
            app:elevation="0dp"
            app:strokeColor="@color/item_text_selected"
            app:strokeWidth="1dp" />
    </LinearLayout>
</ScrollView>