<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/product1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_product_selector"
            android:padding="16dp">

            <!-- 方案标题 -->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/trial_title"
                android:textColor="@color/item_text_normal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- 价格信息 -->
            <TextView
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_title"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/trial_price"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

        </RelativeLayout>

        <!-- 节省标签 -->
        <TextView
            android:id="@+id/badge_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_gravity="right|top"
            android:background="@drawable/bg_save_badge"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/save_badge"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

    </FrameLayout>


</merge>